test/errors/stackoverflow/list_eq.yasl




let x = []
x->push(x)

# echo x

let y = []
y->push(y)

# echo y

echo x == y
